Resolved all reference errors, added miising fonts, javascripts and images, precompiling of images, use new javascripts, fonts etc.

--- a/app/assets/stylesheets/fonts.css.erb
+++ b/app/assets/stylesheets/fonts.css.erb
@@ -20,3 +20,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'revicons';
+  src:url('<%= font_path('revicons/revicons.eot') %>');
+  url('<%= font_path('revicons/revicons.svg#icomoon') %>') format('svg'),
+  url('<%= font_path('revicons/revicons.woff') %>') format('woff'),
+  url('<%= font_path('revicons/revicons.ttf') %>') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
