--- a/app/views/static_pages_controller/home.html.haml
+++ b/app/views/static_pages_controller/home.html.haml
@@ -6,7 +6,8 @@
       / Slide 1
       %li{"data-description" => "Nurturing the most awesome minds.", "data-easein" => "default", "data-easeout" => "default", "data-fsmasterspeed" => "1500", "data-fsslotamount" => "7", "data-fstransition" => "fade", "data-index" => "rs-129", "data-masterspeed" => "default", "data-rotate" => "0", "data-saveperformance" => "off", "data-slotamount" => "default", "data-thumb" => "", "data-title" => "A STUDY ON HAPPINESS", "data-transition" => "parallaxvertical"}
         / MAIN IMAGE
-        %img.rev-slidebg{:alt => "", "data-bgfit" => "cover", "data-bgparallax" => "10", "data-bgposition" => "center center", "data-bgrepeat" => "no-repeat", "data-lazyload" => "images/slider-2.jpg", "data-no-retina" => "", :src => "images/dummy.jpg"}/
+
+        =image_tag("dummy.jpg", alt: "", data: {"bgfit" => "cover", "bgparallax" => "10", "bgposition" => "center center", "bgrepeat" => "no-repeat", "lazyload" => image_path("slider-2.jpg"), "no-retina" => ""}, class: "rev-slidebg")
         / Small Text
         #layer-1-small-text.tp-caption.tp-resizeme.rs-parallaxlevel-0.color2{"data-color" => "['#1696e7']", "data-fontsize" => "['24', '24', '22', '16']", "data-height" => "28", "data-hoffset" => "['50','50','50','30']", "data-mask_in" => "x:0px;y:0px;s:inherit;e:inherit;", "data-mask_out" => "x:0;y:0;s:inherit;e:inherit;", "data-responsive_offset" => "on", "data-splitin" => "none", "data-splitout" => "none", "data-start" => "1000", "data-transform_idle" => "o:1;", "data-transform_in" => "y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;", "data-transform_out" => "auto:auto;s:1000;e:Power3.easeInOut;", "data-voffset" => "['-120','-120','-120','-120']", "data-whitespace" => "nowrap", "data-width" => "none", "data-x" => "['left','left','left','left']", "data-y" => "['middle','middle','middle','middle']", :style => "z-index: 10; white-space: nowrap; font-weight:400;"}
           We care for you.
@@ -22,7 +23,7 @@
       / Slide 2
       %li{"data-description" => "Nurturing the most awesome minds.", "data-easein" => "default", "data-easeout" => "default", "data-fsmasterspeed" => "1500", "data-fsslotamount" => "7", "data-fstransition" => "fade", "data-index" => "rs-2", "data-masterspeed" => "default", "data-rotate" => "0", "data-saveperformance" => "off", "data-slotamount" => "default", "data-thumb" => "", "data-title" => "A STUDY ON HAPPINESS", "data-transition" => "parallaxvertical"}
         / MAIN IMAGE
-        %img.rev-slidebg{:alt => "", "data-bgfit" => "cover", "data-bgparallax" => "10", "data-bgposition" => "center center", "data-bgrepeat" => "no-repeat", "data-lazyload" => "images/slider-1.jpg", "data-no-retina" => "", :src => "images/dummy.jpg"}/
+        =image_tag("dummy.jpg", alt: "", data: {"bgfit" => "cover", "bgparallax" => "10", "bgposition" => "center center", "bgrepeat" => "no-repeat", "lazyload" => image_path("slider-1.jpg"), "no-retina" => ""}, class: "rev-slidebg")
         / Small Text
         #layer-2-small-text.tp-caption.tp-resizeme.rs-parallaxlevel-0.color2{"data-color" => "['#1696e7']", "data-fontsize" => "['24', '24', '22', '16']", "data-height" => "28", "data-hoffset" => "['50','50','50','50']", "data-mask_in" => "x:0px;y:0px;s:inherit;e:inherit;", "data-mask_out" => "x:0;y:0;s:inherit;e:inherit;", "data-responsive_offset" => "on", "data-splitin" => "none", "data-splitout" => "none", "data-start" => "1000", "data-transform_idle" => "o:1;", "data-transform_in" => "y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;", "data-transform_out" => "auto:auto;s:1000;e:Power3.easeInOut;", "data-voffset" => "['-120','-120','-120','-120']", "data-whitespace" => "nowrap", "data-width" => "none", "data-x" => "['right','right','right','right']", "data-y" => "['middle','middle','middle','middle']", :style => "z-index: 10; white-space: nowrap; font-weight:400; text-align:right"}
           Affordable Advanced Treatments.
@@ -68,9 +69,7 @@
           %h4.heading Qualified Doctors
           %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
     .col-sm-4.mt-20
-      .img.img-responsive
-        =image_tag("photo-1.png", alt: "gdzie ten obraz", class: "img-responsive") 
-      / %img.img-responsive{:alt => "gdzie ten obraz kuraw", :src => "photo-1.png"}/
+      =image_tag("photo-1.png", alt: "", class: "img-responsive")
 .container.mt-80
   .row
     .col-sm-12
@@ -83,7 +82,7 @@
     .col-sm-4
       .doctor-box-2
         .doctor-img
-          %img.img-circle{:alt => "", :src => "images/doctor-small-1.jpg"}/
+          =image_tag("doctor-small-1.jpg", alt: "", class: "img-circle")
         .doctor-name
           %h4.heading Mr. Roberto Blackwell
           %span.doctor-desig Head Of Department
@@ -97,7 +96,7 @@
     .col-sm-4
       .doctor-box-2
         .doctor-img
-          %img.img-circle{:alt => "", :src => "images/doctor-small-2.jpg"}/
+          =image_tag("doctor-small-2.jpg", alt: "", class: "img-circle")
         .doctor-name
           %h4.heading Ms. Everett Holder
           %span.doctor-desig Head Of Department
@@ -111,7 +110,7 @@
     .col-sm-4
       .doctor-box-2
         .doctor-img
-          %img.img-circle{:alt => "", :src => "images/doctor-small-3.jpg"}/
+          =image_tag("doctor-small-3.jpg", alt: "", class: "img-circle")
         .doctor-name
           %h4.heading Ms. Mike Hendricks
           %span.doctor-desig Head Of Department
@@ -188,7 +187,7 @@
         %p.sub-heading Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
     .col-sm-4
       .doctor-box-1
-        %img.img-responsive{:alt => "", :src => "images/doc-2.png"}/
+        =image_tag("doc-2.png", alt: "", class: "img-responsive")
         .doctor-details
           %h5.doctor-name Mr. Roberto Blackwell
           %span.doctor-desig Managing Director
@@ -207,7 +206,7 @@
           %a.btn.btn-primary.btn-sm{:href => "doctor-single-sidebar.html"} View profile
     .col-sm-4
       .doctor-box-1
-        %img.img-responsive{:alt => "", :src => "images/doc-1.png"}/
+        =image_tag("doc-1.png", alt: "", class: "img-responsive")
         .doctor-details
           %h5.doctor-name Ms. Everett Holder
           %span.doctor-desig Head Of Department
@@ -226,7 +225,7 @@
           %a.btn.btn-primary.btn-sm{:href => "doctor-single-sidebar.html"} View profile
     .col-sm-4
       .doctor-box-1
-        %img.img-responsive{:alt => "", :src => "images/doc-3.png"}/
+        =image_tag("doc-3.png", alt: "", class: "img-responsive")
         .doctor-details
           %h5.doctor-name Ms. Mike Hendricks
           %span.doctor-desig Senior Gynae
@@ -435,7 +434,7 @@
           Events
         %p.sub-heading Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
     .col-sm-6
-      .event-box{:style => "background-image:url('assets/images/events-1.jpg')"}
+      .event-box{:style => "background-image:#{image_path('events-1.jpg')}"}
         .event-header
           %h3.heading Global Neuro-Surgeon Meet Up
           %ul.event-details
@@ -448,7 +447,7 @@
             %br/
             %a.btn.btn-black.btn-sm{:href => ""} Buy tickets
     .col-sm-6
-      .event-box{:style => "background-image:url('images/events-2.jpg')"}
+      .event-box{:style => "background-image:#{image_path('events-2.jpg')}"}
         .event-header
           %h3.heading General Fitness Workshop
           %ul.event-details
@@ -464,7 +463,7 @@
 / Modal
 #modal1.modal.fade.modal-popup{"data-open-delay" => "1500", "data-open-onload" => "true", :role => "dialog", :tabindex => "-1"}
   .modal-dialog.modal-lg{:role => "document"}
-    .modal-content{:style => "background-image:url('images/modal-background.jpg'); background-size:cover"}
+    .modal-content{:style => "background-image:#{image_path('modal-background.jpg')}; background-size:cover"}
       %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
         %i.fa.fa-times
       .modal-body
@@ -500,3 +499,14 @@
         Medwise custom message to for users to accept terms and conditions. To continue using this site, you must agree to our terms.
         \  
         %button.btn.btn-primary.btn-sm{"data-dismiss" => "alert", :type => "button"} I accept
+
+
+
+
+
+
+
+
+
+
+
