--- a/app/views/static_pages_controller/home.html.haml
+++ b/app/views/static_pages_controller/home.html.haml
@@ -183,11 +183,11 @@
         %h2.heading
           Meet
           %span.color1 Our
-          Doctors
+          Team
         %p.sub-heading Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
     .col-sm-4
       .doctor-box-1
-        =image_tag("doc-2.png", alt: "", class: "img-responsive")
+        =image_tag("person-2.jpg", alt: "", class: "img-responsive")
         .doctor-details
           %h5.doctor-name Mr. Roberto Blackwell
           %span.doctor-desig Managing Director
@@ -206,7 +206,7 @@
           %a.btn.btn-primary.btn-sm{:href => "doctor-single-sidebar.html"} View profile
     .col-sm-4
       .doctor-box-1
-        =image_tag("doc-1.png", alt: "", class: "img-responsive")
+        =image_tag("person-1.jpg", alt: "", class: "img-responsive")
         .doctor-details
           %h5.doctor-name Ms. Everett Holder
           %span.doctor-desig Head Of Department
@@ -225,7 +225,7 @@
           %a.btn.btn-primary.btn-sm{:href => "doctor-single-sidebar.html"} View profile
     .col-sm-4
       .doctor-box-1
-        =image_tag("doc-3.png", alt: "", class: "img-responsive")
+        =image_tag("person-3.jpg", alt: "", class: "img-responsive")
         .doctor-details
           %h5.doctor-name Ms. Mike Hendricks
           %span.doctor-desig Senior Gynae
@@ -400,7 +400,6 @@
     .col-sm-4
       .blog-box
         .blog-header
-          / =image_tag ("850-600-normal-3.jpg", class: "img-responsive")
           =image_tag("850-600-normal-3.jpg", alt: "", class: "img-responsive") 
           %br/
           %h4.heading Why do we give up on weight loss?
