--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -38,35 +38,35 @@
           %li
             =link_to I18n.t('header.home'), controller: "static_pages_controller", action: "home"
           %li
-            =link_to I18n.t('header.dispensaries'), root_path
+            =link_to I18n.t('header.dispensary.dispensaries'), root_path
             %ul.sub-menu
               / Sub Menu
               %li
                 =link_to root_path do
-                  = I18n.t('header.disp_ldz')
-                  =content_tag :span, I18n.t('header.disp'), :class => "badge"
+                  = I18n.t('header.dispensary.ldz')
+                  =content_tag :span, I18n.t('header.dispensary.dispensary'), :class => "badge"
               %li
                 =link_to root_path do
-                  = I18n.t('header.disp_wwa')
-                  =content_tag :span, I18n.t('header.disp'), :class => "badge"
+                  = I18n.t('header.dispensary.wwa')
+                  =content_tag :span, I18n.t('header.dispensary.dispensary'), :class => "badge"
           %li
             =link_to I18n.t('header.license'), root_path
             %ul.sub-menu
-              %li.heading=I18n.t('header.disp')
+              %li.heading=I18n.t('header.dispensary.dispensary')
               %li
-                =link_to I18n.t('header.dispensary-mission'), root_path
+                =link_to I18n.t('header.dispensary.mission'), controller: "static_pages_controller", action: "dispensary"
               %li
-                =link_to I18n.t('header.dispensary-how-to-open'), root_path
+                =link_to I18n.t('header.dispensary.how-to-open'), controller: "static_pages_controller", action: "dispensary"
               %li
-                =link_to I18n.t('header.dispensary-license'), root_path
+                =link_to I18n.t('header.dispensary.license'), controller: "static_pages_controller", action: "dispensary"
               %li.hr
-              %li.heading=I18n.t('header.grow')
+              %li.heading=I18n.t('header.growing.indoor')
               %li
-                =link_to I18n.t('header.grow-mission'), root_path
+                =link_to I18n.t('header.growing.mission'), root_path
               %li
-                =link_to I18n.t('header.grow-how-to-open'), root_path
+                =link_to I18n.t('header.growing.how-to-open'), root_path
               %li
-                =link_to I18n.t('header.grow-license'), root_path
+                =link_to I18n.t('header.growing.license'), root_path
           %li
             =link_to I18n.t('header.partners'), root_path
             %ul.sub-menu
