fix assets precompile error

--- a/app/assets/stylesheets/fonts.css.erb
+++ b/app/assets/stylesheets/fonts.css.erb
@@ -23,7 +23,7 @@
 @font-face {
   font-family: 'revicons';
   src:url('<%= font_path('revicons/revicons.eot') %>');
-  url('<%= font_path('revicons/revicons.svg#icomoon') %>') format('svg'),
+  src:url('<%= font_path('revicons/revicons.svg#icomoon') %>') format('svg'),
   url('<%= font_path('revicons/revicons.woff') %>') format('woff'),
   url('<%= font_path('revicons/revicons.ttf') %>') format('truetype');
   font-weight: normal;
