adding some cannahub content

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -27,16 +27,16 @@
             %ul.contact
               %li
                 %i.fa.fa-phone
-                +48 73*32*32100
+                +48 711 111 000
               %li
                 %i.fa.fa-envelope
-                federacja@cannabishouse.eu
+                biuro@cannahub.eu
   .footer-sec
     / Secondary Footer
     .container
       .row
         .col-sm-12
           %span
-            Copyright © 2012-2018 
-            =link_to "Cannabis House Sp. z o.o. ", controller: "static_pages_controller", action: "home"
+            Copyright © 2017-2018 
+            =link_to "Canna Hub Sp. z o.o. ", controller: "static_pages_controller", action: "home"
             All rights Reserved.
