--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -50,7 +50,7 @@
                   = I18n.t('header.dispensary.wwa')
                   =content_tag :span, I18n.t('header.dispensary.dispensary'), :class => "badge"
           %li
-            =link_to I18n.t('header.license'), root_path
+            =link_to I18n.t('header.offer'), root_path
             %ul.sub-menu
               %li.heading=I18n.t('header.dispensary.dispensary')
               %li
