--- a/app/views/static_pages_controller/home.html.haml
+++ b/app/views/static_pages_controller/home.html.haml
@@ -10,13 +10,13 @@
         =image_tag("dummy.jpg", alt: "", data: {"bgfit" => "cover", "bgparallax" => "10", "bgposition" => "center center", "bgrepeat" => "no-repeat", "lazyload" => image_path("slider-2.jpg"), "no-retina" => ""}, class: "rev-slidebg")
         / Small Text
         #layer-1-small-text.tp-caption.tp-resizeme.rs-parallaxlevel-0.color2{"data-color" => "['#1696e7']", "data-fontsize" => "['24', '24', '22', '16']", "data-height" => "28", "data-hoffset" => "['50','50','50','30']", "data-mask_in" => "x:0px;y:0px;s:inherit;e:inherit;", "data-mask_out" => "x:0;y:0;s:inherit;e:inherit;", "data-responsive_offset" => "on", "data-splitin" => "none", "data-splitout" => "none", "data-start" => "1000", "data-transform_idle" => "o:1;", "data-transform_in" => "y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;", "data-transform_out" => "auto:auto;s:1000;e:Power3.easeInOut;", "data-voffset" => "['-120','-120','-120','-120']", "data-whitespace" => "nowrap", "data-width" => "none", "data-x" => "['left','left','left','left']", "data-y" => "['middle','middle','middle','middle']", :style => "z-index: 10; white-space: nowrap; font-weight:400;"}
-          We care for you.
+          Canna HUB HUB HUB
         / Main Text
         #slide-1-main-text.tp-caption.tp-resizeme.rs-parallaxlevel-0{"data-color" => "['#fff']", "data-fontsize" => "['46','46','46','32']", "data-height" => "120", "data-hoffset" => "['50','50','50','30']", "data-lineheight" => "['55','55','55','35']", "data-mask_in" => "x:0px;y:0px;s:inherit;e:inherit;", "data-mask_out" => "x:0;y:0;s:inherit;e:inherit;", "data-responsive_offset" => "on", "data-splitin" => "none", "data-splitout" => "none", "data-start" => "1000", "data-transform_idle" => "o:1;", "data-transform_in" => "y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;", "data-transform_out" => "auto:auto;s:1000;e:Power3.easeInOut;", "data-voffset" => "['-50','-50','-50','-50']", "data-whitespace" => "normal", "data-width" => "['600','600','600','420']", "data-x" => "['left','left','left','left']", "data-y" => "['middle','middle','middle','middle']", :style => "z-index: 11; min-width: 600px; max-width: 600px; font-weight:400; white-space: normal; text-shadow:0px 2px 5px #000; text-transform:capitalize; text-align:left;"}
-          Experienced doctors for your good health.
+          Witamy i Zapraszamy, HUB HUB HUB
         / Button
         %a#slide-1-button-1.tp-caption.btn.btn-primary.rs-parallaxlevel-0.hidden-xs.tp-resizeme{"data-height" => "none", "data-hoffset" => "['53','53','53','30']", "data-mask_in" => "x:0px;y:0px;", "data-mask_out" => "x:0;y:0;", "data-responsive" => "on", "data-responsive_offset" => "on", "data-splitin" => "none", "data-splitout" => "none", "data-start" => "1000", "data-transform_idle" => "o:1;", "data-transform_in" => "y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;", "data-transform_out" => "auto:auto;s:1000;e:Power3.easeInOut;", "data-voffset" => "['50','50','50','50']", "data-whitespace" => "nowrap", "data-width" => "none", "data-x" => "['left','left','left','left']", "data-y" => "['middle','middle','middle','middle']", :href => "about.html", :style => "z-index: 12;"}
-          READ MORE
+          Czytaj Więcej
         / Button
         %a#slide-1-button-2.tp-caption.btn.btn-black.rs-parallaxlevel-0.hidden-xs.tp-resizeme{"data-height" => "none", "data-hoffset" => "['210','210','210','210']", "data-mask_in" => "x:0px;y:0px;", "data-mask_out" => "x:0;y:0;", "data-responsive" => "on", "data-responsive_offset" => "on", "data-splitin" => "none", "data-splitout" => "none", "data-start" => "1000", "data-transform_idle" => "o:1;", "data-transform_in" => "y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;", "data-transform_out" => "auto:auto;s:1000;e:Power3.easeInOut;", "data-voffset" => "['50','50','50','50']", "data-whitespace" => "nowrap", "data-width" => "none", "data-x" => "['left','left','left','left']", "data-y" => "['middle','middle','middle','middle']", :href => "pricing-tables.html", :style => "z-index: 12;"}
           View Plans
@@ -151,31 +151,6 @@
           %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
           %br/
           %a.btn.btn-black.btn-sm{:href => "why-us.html"} Read More
-.container.mt-80
-  .row
-    .col-sm-7
-      %h2.heading
-        %span.color1 Excellence
-        is the word.
-      %p.justify A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
-      .row.mt-40
-        .col-sm-6
-          %h4 Cardiac Department
-          %p Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-        .col-sm-6
-          %h4 Research & Development
-          %p Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however.
-      .row.mt-20
-        .col-sm-6
-          %h4 World Research Centres
-          %p Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-        .col-sm-6
-          %h4 Intensive Care Given
-          %p Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however.
-    .col-sm-5
-      .youtube{"data-video-id" => "IeSW2Gg1qIY", :style => "height: 500px;"}
-        / Replace video id with your video id
-        %i.fa.fa-play.btn-play
 .container.mt-80
   .row
     .col-sm-12
@@ -432,32 +407,6 @@
           %span.color1 Upcoming
           Events
         %p.sub-heading Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
-    .col-sm-6
-      .event-box{:style => "background-image:#{image_path('events-1.jpg')}"}
-        .event-header
-          %h3.heading Global Neuro-Surgeon Meet Up
-          %ul.event-details
-            %li 4:00 - 08:00 p.m.
-            %li Saturday, August 19 2017
-            %li New York Fitness Centre, NY
-          .event-text
-            %br/
-            %p.justify Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.
-            %br/
-            %a.btn.btn-black.btn-sm{:href => ""} Buy tickets
-    .col-sm-6
-      .event-box{:style => "background-image:#{image_path('events-2.jpg')}"}
-        .event-header
-          %h3.heading General Fitness Workshop
-          %ul.event-details
-            %li 4:00 - 08:00 p.m.
-            %li Saturday, August 19 2017
-            %li New York Fitness Centre, NY
-          .event-text
-            %br/
-            %p.justify Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.
-            %br/
-            %a.btn.btn-black.btn-sm{:href => ""} Buy tickets
 
 / Modal
 #modal1.modal.fade.modal-popup{"data-open-delay" => "1500", "data-open-onload" => "true", :role => "dialog", :tabindex => "-1"}
@@ -495,9 +444,10 @@
   .container
     .row
       .col-sm-12
-        Medwise custom message to for users to accept terms and conditions. To continue using this site, you must agree to our terms.
+        Szanowna Użytkowniczko! Szanowny Użytkowniku!
+        Aby dalej móc dostarczać coraz lepsze materiały redakcyjne i udostępniać coraz lepsze usługi, potrzebujemy zgody na dopasowanie treści marketingowych do Twojego zachowania. Dzięki nim możemy finansować rozwój naszych usług. Dbamy o Twoją prywatność. Nie zwiększamy zakresu naszych uprawnień. Twoje dane są u nas bezpieczne, a zgodę możesz wycofać w każdej chwili na podstronie polityka prywatności.
         \  
-        %button.btn.btn-primary.btn-sm{"data-dismiss" => "alert", :type => "button"} I accept
+        %button.btn.btn-primary.btn-sm{"data-dismiss" => "alert", :type => "button"} Akceptuję
 
 
 
