--- a/app/views/static_pages_controller/about.html.haml
+++ b/app/views/static_pages_controller/about.html.haml
@@ -16,6 +16,7 @@
         %br
         &nbsp&nbsp– leki pierwszej kategorii, dopuszczone na podstawie badań klinicznych, mogą być warunkowo objęte finansowaniem rządowym, natomiast produkty w postaci surowców farmaceutycznych są z tej możliwości ustawowo wyłączone.
         %br
+        %br
         %b Dla każdej kategorii produktów obowiązują szczegółowe regulacje określające specyficzne warunki rejestracji, wytwarzania i obrotu na terytorium RP zgodne z wymogami EU.
       .row.mt-40
         .col-sm-6
@@ -23,6 +24,9 @@
           %p Specyficzna konstrukcja regulacji pozwala na utworzenie na terytorium Polski centralnego punktu wytwarzania substancji czynnej oraz surowca farmaceutycznego przeznaczonego na rynek całej Unii Europejskiej.
         .col-sm-6
           %h4 Podstawa prawna
-          %p Ustawa z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych Dziennik Ustaw
+          %p 
+            =link_to I18n.t('about.act'), "http://dziennikustaw.gov.pl/du/2017/1458/1", target: "_blank"  
+            z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych
     .col-sm-5.mt-20
       =image_tag("low1.png", alt: "O to walczymy!", class: "img-responsive")
+%br
