--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -30,7 +30,7 @@
         %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#main-navigation", "data-toggle" => "collapse", :type => "button"}
           %span.sr-only=I18n.t('header.menu')
           %i.fa.fa-bars
-        =link_to image_tag("logo.png", alt: "logo"), {action: 'home', controller: 'static_pages_controller'}, class: 'navbar-brand'
+        =link_to image_tag("logo.png", alt: "logo"), {action: 'home', controller: 'static_pages_controller'}, class: 'navbar-brand', style: "margin-top: 7px;"
         / Replace with your Logo
       #main-navigation.collapse.navbar-collapse
         / Main Menu
