updated photos and changed font

--- a/app/views/static_pages_controller/about.html.haml
+++ b/app/views/static_pages_controller/about.html.haml
@@ -28,5 +28,5 @@
             =link_to I18n.t('about.act'), "http://dziennikustaw.gov.pl/du/2017/1458/1", target: "_blank"  
             z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych
     .col-sm-5.mt-20
-      =image_tag("low1.png", alt: "O to walczymy!", class: "img-responsive")
+      =image_tag("cannaHub.jpg", alt: "O to walczymy!", class: "img-responsive")
 %br
