--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,15 +13,16 @@
     / %link{:href => "slider-revolution/css/layers.css", :rel => "stylesheet", :type => "text/css"}/
     / %link{:href => "slider-revolution/css/navigation.css", :rel => "stylesheet", :type => "text/css"}/
     / Google Fonts
-    %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:300,400,700", :rel => "stylesheet"}/
-    %link{:href => "https://fonts.googleapis.com/css?family=Volkhov:400,400i", :rel => "stylesheet"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Exo+2|Open+Sans:300,400,700", :rel => "stylesheet"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Exo+2|Volkhov:400,400i", :rel => "stylesheet"}/
+    %script{:src => "http://maps.google.com/maps/api/js?sensor=false", :type => "text/javascript"}
     / Respond.js and HTML shiv provide HTML5 support in older browsers like IE9 and 8
     /[if lt IE 9]
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     %title= full_title(yield(:title))
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     -#= render 'layouts/loader'
