--- a/app/views/static_pages_controller/contact.html.haml
+++ b/app/views/static_pages_controller/contact.html.haml
@@ -5,7 +5,7 @@
       .col-sm-12
         .mt-20
       .col-sm-4.mt-20
-        %h3.heading Visit Us
+        %h3.heading Odwiedź nas !
         %p.justify Nasze biuro pracuje od poniedziałku do piątku w godzinach od 10 do 16.
         %br/
         %address
